# MDTraj

./: .gitignore  CMakeLists.txt  README.md  build_project.sh  install.sh
config/: input.yaml
src/: .RDFCalculator.cpp.swp  RDFCalculator.cpp  RDFCalculator.h  XYZReader.cpp  XYZReader.h  configuration.cpp  configuration.h  main.cpp
tests/: incorrect_snap.xyz  test_rdf_calculator.cpp  test_xyz_reader.cpp
